--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "@types/node": "14.18.12",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
+    "@vscode/test-electron": "1.6.2",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "execa": "5.1.1",
     "husky": "7.0.4",
+    "is-ci": "2.0.0",
     "jest": "27.5.1",
     "lint-staged": "12.3.7",
     "prettier": "2.6.1",
     "semver": "7.3.5",
     "typescript": "4.6.3",
-    "vsce": "2.7.0",
-    "@vscode/test-electron": "1.6.2"
+    "vsce": "2.7.0"
   },
   "scripts": {
     "build": "tsc -b",
@@ -43,7 +44,7 @@
     "test:e2e": "sh scripts/e2eTestsOnVsix/test.sh",
     "testScripts": "jest __tests__",
     "test:bump": "sh scripts/e2eTestsOnVsix/bump_version.sh",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   },
   "publishConfig": {
     "access": "public"
