--- a/packages/vscode/.vscodeignore
+++ b/packages/vscode/.vscodeignore
@@ -1,4 +1,8 @@
-.vscode
-src
+.vscode/**
+.vscode-test/**
+.gitignore
 **/tsconfig.json
-resources/*.gif
+src
+fixtures
+.eslintignore
+.prettierignore
